[gd_scene load_steps=8 format=3 uid="uid://cawle4tk6v2u4"]

[ext_resource type="Script" uid="uid://dhlnysyp0nhe3" path="res://scripts/Run.gd" id="1"]
[ext_resource type="Script" uid="uid://ddg2rbackcek4" path="res://scripts/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c4te2a1xrdkpe" path="res://assets/player.png" id="3"]
[ext_resource type="Script" uid="uid://daj68jq05ljqm" path="res://scripts/ExtractZone.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://dqqq0pvow0avk" path="res://assets/extract_zone.png" id="5"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 12.0
height = 24.0

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(160, 80)

[node name="Run" type="Node2D"]
script = ExtResource("1")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("1")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="UI"]
offset_left = 16.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 28.0
value = 100.0

[node name="StaminaBar" type="TextureProgressBar" parent="UI"]
offset_left = 16.0
offset_top = 32.0
offset_right = 256.0
offset_bottom = 60.0
value = 100.0

[node name="HintLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 64.0
text = "Trouve la zone orange (E pour extraire). I = inventaire. 1..5 = hotbar (Bandage soigne)."

[node name="RunInvLabel" type="Label" parent="UI"]
offset_left = 16.0
offset_top = 88.0
text = "Run: (vide)"

[node name="InventoryPanel" type="Panel" parent="UI"]
visible = false
offset_left = 900.0
offset_top = 60.0
offset_right = 1260.0
offset_bottom = 340.0

[node name="InvGrid" type="GridContainer" parent="UI/InventoryPanel"]
layout_mode = 0
columns = 4

[node name="Hotbar" type="HBoxContainer" parent="UI"]
offset_left = 16.0
offset_top = 680.0
offset_right = 1264.0
offset_bottom = 716.0

[node name="ExtractZone" type="Area2D" parent="."]
position = Vector2(200, 0)
script = ExtResource("4")

[node name="Marker" type="Sprite2D" parent="ExtractZone"]
texture = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExtractZone"]
shape = SubResource("2")
